--- a/Ejercicio-1-2-Blanca-Cano.ipynb
+++ b/Ejercicio-1-2-Blanca-Cano.ipynb
@@ -481,95 +481,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ALGORITMO DE DERECHA A IZQUIERDA y de izquierda a derecha \n",
-      "Para base b=2 50057215 vs 50057215\n",
-      "Para base b=3 64972403 vs 64972403\n",
-      "Para base b=5 58601398 vs 58601398\n",
-      "Para base b=7 22113448 vs 22113448\n",
-      "Para base b=11 21343212 vs 21343212\n"
+      "Comparamos resultados\n",
+      "Para base b=2 algoritmo de derecha a izquierda: 1, algoritmo izquierda a derecha: 1\n",
+      "Para base b=3 algoritmo de derecha a izquierda: 1, algoritmo izquierda a derecha: 1\n",
+      "Para base b=5 algoritmo de derecha a izquierda: 1, algoritmo izquierda a derecha: 1\n",
+      "Para base b=7 algoritmo de derecha a izquierda: 1, algoritmo izquierda a derecha: 1\n",
+      "Para base b=11 algoritmo de derecha a izquierda: 1, algoritmo izquierda a derecha: 1\n"
      ]
     }
    ],
    "source": [
-    "bases = [2,3,5,7,11]\n",
-    "println(\"ALGORITMO DE DERECHA A IZQUIERDA y de izquierda a derecha \")\n",
+    "println(\"Comparamos resultados\")\n",
     "for b in bases\n",
     "    r1 = RightToLeftFastExponential(b, n-1, n)\n",
     "    r2 = LeftToRightFastExponential(b, n-1, n)\n",
-    "    println(\"Para base b=$(b) $(r1) vs $r2\")\n",
+    "    println(\"Para base b=$(b) algoritmo de derecha a izquierda: $(r1), algoritmo izquierda a derecha: $r2\")\n",
     "end\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "= 1 que en mi algoritmo es 1\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 2 que en mi algoritmo es 2\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 2 que en mi algoritmo es 2\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 2 que en mi algoritmo es 2\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 3 que en mi algoritmo es 3\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 4 que en mi algoritmo es 4\n",
-      "Hay 0 errores\n",
-      "Any[]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Test\n",
-    "errores = 0\n",
-    "l = []\n",
-    "f(a,b,n) = mod(a^b, n)\n",
-    "for i in 1:10\n",
-    "    for n in [2,3,5]\n",
-    "        b,e = map(abs, rand(big.(2:10),2 )) \n",
-    "        x = f(b,e,n)\n",
-    "        y = RightToLeftFastExponential(b,e,n)\n",
-    "        if x != y \n",
-    "             errores +=1 \n",
-    "             push!(l, (b,e,n))\n",
-    "        end\n",
-    "        println(\"= $(f(b,e,n)) que en mi algoritmo es $(RightToLeftFastExponential(b,e,n))\")\n",
-    "    end\n",
-    "end\n",
-    "println(\"Hay $(errores) errores\")\n",
-    "println(l)"
    ]
   },
   {
@@ -613,18 +547,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Cálculos para p=8 ---\n",
       "mod (75577399,8) = 7\n",
-      "--- Cálculos para p=4 ---\n",
       "mod (75577399,4) = 3\n",
-      "--- Cálculos para p=3 ---\n",
       "mod (75577399,3) = 1\n"
      ]
     },
@@ -634,14 +565,14 @@
        "1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Algunos cálculos\n",
     "function n_modulo_p(n,p)\n",
-    "    println(\"--- Cálculos para p=$p ---\")\n",
     "    n_modulo_p = mod(n,p)\n",
     "    println(\"mod ($n,$p) = $n_modulo_p\")\n",
     "    return n_modulo_p\n",
