--- a/Ejercicio-1-2-Blanca-Cano.ipynb
+++ b/Ejercicio-1-2-Blanca-Cano.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "75577392"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -105,49 +105,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ejección de derecha a izquierda para n=27213647\n",
-      "paso 0, acu: 1, base: 2\n",
-      "paso 1, acu: 1, base: 4\n",
-      "paso 2, acu: 4, base: 16\n",
-      "paso 3, acu: 64, base: 256\n",
-      "paso 4, acu: 16384, base: 65536\n",
-      "paso 5, acu: 16384, base: 22424717\n",
-      "paso 6, acu: 16384, base: 12167649\n",
-      "paso 7, acu: 14796941, base: 26585339\n",
-      "paso 8, acu: 14796941, base: 9779482\n",
-      "paso 9, acu: 120175, base: 15067521\n",
-      "paso 10, acu: 24905736, base: 12424177\n",
-      "paso 11, acu: 9320126, base: 14159809\n",
-      "paso 12, acu: 10785431, base: 15283\n",
-      "paso 13, acu: 682094, base: 15860913\n",
-      "paso 14, acu: 11508854, base: 2314287\n",
-      "paso 15, acu: 11508854, base: 6452299\n",
-      "paso 16, acu: 11508854, base: 17649979\n",
-      "paso 17, acu: 15616437, base: 11515927\n",
-      "paso 18, acu: 8921297, base: 9800221\n",
-      "paso 19, acu: 10593740, base: 23701151\n",
-      "paso 20, acu: 1995822, base: 21932449\n",
-      "paso 21, acu: 4173990, base: 3214080\n",
-      "paso 22, acu: 4173990, base: 9845200\n",
-      "paso 23, acu: 4173990, base: 760573\n",
-      "paso 24, acu: 16105485, base: 18007697\n",
-      "paso 25, acu: 1, base: 13932984\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "1"
+       "VerboseRightToLeftFastExponential (generic function with 1 method)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,15 +153,12 @@
     "        println(\"paso $paso, acu: $acc, base: $a\")\n",
     "    end \n",
     "    return acc\n",
-    "end\n",
-    "p=27213647\n",
-    "println(\"Ejección de derecha a izquierda para n=$p\")\n",
-    "VerboseRightToLeftFastExponential(2, p-1, p)"
+    "end\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -360,49 +324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "p-1 = 27213646 = 1100111110011111101001110 (en binario)\n",
-      "Paso 0 , acu: 1\n",
-      "Paso 1 , acu: 2\n",
-      "Paso 2 , acu: 8\n",
-      "Paso 3 , acu: 64\n",
-      "Paso 4 , acu: 4096\n",
-      "Paso 5 , acu: 6340785\n",
-      "Paso 6 , acu: 6967674\n",
-      "Paso 7 , acu: 2913255\n",
-      "Paso 8 , acu: 5278505\n",
-      "Paso 9 , acu: 8390032\n",
-      "Paso 10 , acu: 21530122\n",
-      "Paso 11 , acu: 20718507\n",
-      "Paso 12 , acu: 6234754\n",
-      "Paso 13 , acu: 14354021\n",
-      "Paso 14 , acu: 18664779\n",
-      "Paso 15 , acu: 21238793\n",
-      "Paso 16 , acu: 9159785\n",
-      "Paso 17 , acu: 1897988\n",
-      "Paso 18 , acu: 6353813\n",
-      "Paso 19 , acu: 22747524\n",
-      "Paso 20 , acu: 12082479\n",
-      "Paso 21 , acu: 22922644\n",
-      "Paso 22 , acu: 15226206\n",
-      "Paso 23 , acu: 8424067\n",
-      "Paso 24 , acu: 1\n",
-      "Paso 25 , acu: 1\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "1"
+       "VerboseLeftToRightFastExponential (generic function with 1 method)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,15 +378,12 @@
     "        println(\"Paso $paso , acu: $acc\")\n",
     "    end \n",
     "    return acc\n",
-    "end \n",
-    "# Ejemplo de la diapositiva\n",
-    "p=27213647\n",
-    "VerboseLeftToRightFastExponential(2, p-1, p)"
+    "end "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -489,11 +417,10 @@
      "output_type": "stream",
      "text": [
       "Comparamos resultados\n",
-      "Para base b=2 algoritmo de derecha a izquierda: 1, algoritmo izquierda a derecha: 1\n",
-      "Para base b=3 algoritmo de derecha a izquierda: 1, algoritmo izquierda a derecha: 1\n",
-      "Para base b=5 algoritmo de derecha a izquierda: 1, algoritmo izquierda a derecha: 1\n",
-      "Para base b=7 algoritmo de derecha a izquierda: 1, algoritmo izquierda a derecha: 1\n",
-      "Para base b=11 algoritmo de derecha a izquierda: 1, algoritmo izquierda a derecha: 1\n"
+      "Para base b=2 algoritmo de derecha a izquierda: 50057215, algoritmo izquierda a derecha: 50057215\n",
+      "Para base b=5 algoritmo de derecha a izquierda: 58601398, algoritmo izquierda a derecha: 58601398\n",
+      "Para base b=7 algoritmo de derecha a izquierda: 22113448, algoritmo izquierda a derecha: 22113448\n",
+      "Para base b=11 algoritmo de derecha a izquierda: 21343212, algoritmo izquierda a derecha: 21343212\n"
      ]
     }
    ],
@@ -516,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +452,7 @@
        "75577399"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +492,7 @@
        "1"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,14 +580,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Cálculos para p=5 ---\n",
       "mod (75577399,5) = 4\n"
      ]
     },
@@ -670,7 +596,7 @@
        "4"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +623,7 @@
        "VerboseJacobi (generic function with 1 method)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -791,11 +717,11 @@
      "output_type": "stream",
      "text": [
       "Algoritmo de exponenciación rápida de izquierda a derecha \n",
-      "Para base b=2 mod(2^{75577398}, 75577399) =1\n",
-      "Para base b=3 mod(3^{75577398}, 75577399) =1\n",
-      "Para base b=5 mod(5^{75577398}, 75577399) =1\n",
-      "Para base b=7 mod(7^{75577398}, 75577399) =1\n",
-      "Para base b=11 mod(11^{75577398}, 75577399) =1\n"
+      "Para base b=2 mod(2^{75577398}, 75577399) = 1\n",
+      "Para base b=3 mod(3^{75577398}, 75577399) = 1\n",
+      "Para base b=5 mod(5^{75577398}, 75577399) = 1\n",
+      "Para base b=7 mod(7^{75577398}, 75577399) = 1\n",
+      "Para base b=11 mod(11^{75577398}, 75577399) = 1\n"
      ]
     }
    ],
@@ -821,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
