--- a/Ejercicio-1-2-Blanca-Cano.ipynb
+++ b/Ejercicio-1-2-Blanca-Cano.ipynb
@@ -19,13 +19,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +29,7 @@
        "75577392"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,12 +42,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "i) Mientras $n$ sea múltiplo de 2, 3, 5, 7 u 11 le sumas uno. De forma que tu nuevo $n$ no tenga esos divisores primos."
+    "i) Mientras $n$ sea múltiplo de 2, 3, 5, 7 u 11 le sumas uno. De forma que tu nuevo $n$ no tenga esos divisores primos."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +109,7 @@
        "VerboseRightToLeftFastExponential (generic function with 1 method)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +163,7 @@
       "ALGORITMO DE DERECHA A IZQUIERDA \n",
       "------------------------------------------------------------\n",
       "------------------------------------------------------------\n",
-      "Ejección de derecha a izquierda para base=2 y n=27213647 \n",
+      "Ejección de derecha a izquierda para base=2 y p=75577393 \n",
       "------------------------------------------------------------\n",
       "paso 0, acu: 1, base: 2\n",
       "paso 1, acu: 1, base: 4\n",
@@ -198,10 +193,10 @@
       "paso 25, acu: 25252192, base: 17911643\n",
       "paso 26, acu: 25252192, base: 14745733\n",
       "paso 27, acu: 50057215, base: 28581931\n",
-      "Se tiene que 2^(27213647-1) mod 27213647 = 50057215\n",
+      "Se tiene que 2^(75577393-1) mod 75577393 = 50057215\n",
       "------------------------------------------------------------\n",
       "------------------------------------------------------------\n",
-      "Ejección de derecha a izquierda para base=5 y n=27213647 \n",
+      "Ejección de derecha a izquierda para base=5 y p=75577393 \n",
       "------------------------------------------------------------\n",
       "paso 0, acu: 1, base: 5\n",
       "paso 1, acu: 1, base: 25\n",
@@ -231,10 +226,10 @@
       "paso 25, acu: 60623956, base: 7608436\n",
       "paso 26, acu: 60623956, base: 20929925\n",
       "paso 27, acu: 58601398, base: 75199025\n",
-      "Se tiene que 5^(27213647-1) mod 27213647 = 58601398\n",
+      "Se tiene que 5^(75577393-1) mod 75577393 = 58601398\n",
       "------------------------------------------------------------\n",
       "------------------------------------------------------------\n",
-      "Ejección de derecha a izquierda para base=7 y n=27213647 \n",
+      "Ejección de derecha a izquierda para base=7 y p=75577393 \n",
       "------------------------------------------------------------\n",
       "paso 0, acu: 1, base: 7\n",
       "paso 1, acu: 1, base: 49\n",
@@ -264,10 +259,10 @@
       "paso 25, acu: 13261803, base: 74790498\n",
       "paso 26, acu: 13261803, base: 73737569\n",
       "paso 27, acu: 22113448, base: 67650685\n",
-      "Se tiene que 7^(27213647-1) mod 27213647 = 22113448\n",
+      "Se tiene que 7^(75577393-1) mod 75577393 = 22113448\n",
       "------------------------------------------------------------\n",
       "------------------------------------------------------------\n",
-      "Ejección de derecha a izquierda para base=11 y n=27213647 \n",
+      "Ejección de derecha a izquierda para base=11 y p=75577393 \n",
       "------------------------------------------------------------\n",
       "paso 0, acu: 1, base: 11\n",
       "paso 1, acu: 1, base: 121\n",
@@ -297,7 +292,7 @@
       "paso 25, acu: 58457034, base: 37814342\n",
       "paso 26, acu: 58457034, base: 34178178\n",
       "paso 27, acu: 21343212, base: 9467675\n",
-      "Se tiene que 11^(27213647-1) mod 27213647 = 21343212\n"
+      "Se tiene que 11^(75577393-1) mod 75577393 = 21343212\n"
      ]
     }
    ],
@@ -307,10 +302,10 @@
     "for b in bases\n",
     "    println(repeat('-', 60))\n",
     "    println(repeat('-', 60))\n",
-    "    println(\"Ejección de derecha a izquierda para base=$b y n=$p \")\n",
+    "    println(\"Ejección de derecha a izquierda para base=$b y p=$n \")\n",
     "    println(repeat('-', 60))\n",
     "    r = VerboseRightToLeftFastExponential(b, n-1, n)\n",
-    "    println(\"Se tiene que $(b)^($p-1) mod $p = $(r)\")\n",
+    "    println(\"Se tiene que $(b)^($n-1) mod $n = $(r)\")\n",
     "end\n"
    ]
   },
@@ -324,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +328,7 @@
        "VerboseLeftToRightFastExponential (generic function with 1 method)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +447,7 @@
        "75577399"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +487,7 @@
        "1"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +591,7 @@
        "4"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +618,7 @@
        "VerboseJacobi (generic function with 1 method)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -757,27 +752,27 @@
       "\n",
       "Base 2\n",
       "Por el algoritmo Jacobi (2/75577399) = 1\n",
-      "Calculando el módulo, 2^{27213646/2} = 1\n",
+      "Calculando el módulo, 2^{75577398/2} = 1\n",
       "75577399 es un posible primo Euler en base 2\n",
       "\n",
       "Base 3\n",
       "Por el algoritmo Jacobi (3/75577399) = -1\n",
-      "Calculando el módulo, 3^{27213646/2} = 75577398\n",
+      "Calculando el módulo, 3^{75577398/2} = 75577398\n",
       "75577399 NO es primo gracias al criterio de Euler en base 3\n",
       "\n",
       "Base 5\n",
       "Por el algoritmo Jacobi (5/75577399) = 1\n",
-      "Calculando el módulo, 5^{27213646/2} = 1\n",
+      "Calculando el módulo, 5^{75577398/2} = 1\n",
       "75577399 es un posible primo Euler en base 5\n",
       "\n",
       "Base 7\n",
       "Por el algoritmo Jacobi (7/75577399) = -1\n",
-      "Calculando el módulo, 7^{27213646/2} = 75577398\n",
+      "Calculando el módulo, 7^{75577398/2} = 75577398\n",
       "75577399 NO es primo gracias al criterio de Euler en base 7\n",
       "\n",
       "Base 11\n",
       "Por el algoritmo Jacobi (11/75577399) = 1\n",
-      "Calculando el módulo, 11^{27213646/2} = 1\n",
+      "Calculando el módulo, 11^{75577398/2} = 1\n",
       "75577399 es un posible primo Euler en base 11\n"
      ]
     }
@@ -789,7 +784,7 @@
     "    jacobi = Jacobi(b,n)\n",
     "    println(\"\\nBase $b\")\n",
     "    println(\"Por el algoritmo Jacobi ($b/$n) = $jacobi\")\n",
-    "    println(\"Calculando el módulo, $b^{$((p-1))/2} = $congruente\")\n",
+    "    println(\"Calculando el módulo, $b^{$((n-1))/2} = $congruente\")\n",
     "    println(congruente == jacobi ? \n",
     "        \"$n es un posible primo Euler en base $b\" : \n",
     "        \"$n NO es primo gracias al criterio de Euler en base $b\")\n",
@@ -809,7 +804,7 @@
    "source": [
     "### Conclusiones   \n",
     "Puesto que acabamos de comprobar que $n$ no es primo, se tiene que: \n",
-    "$n$ es un pseudo primo de Fermat para las bases 2,3,5,7 y 11; mientras que se ha comprobado en `celda 2` es un pseudo primo de Euler en las bases 2,5 y 11. "
+    "$n$ es un pseudo primo de Fermat para las bases 2,3,5,7 y 11; mientras que se ha comprobado en `celda 2` que es un pseudo primo de Euler en las bases 2,5 y 11. "
    ]
   }
  ],
@@ -824,8 +819,7 @@
    "mimetype": "application/julia",
    "name": "julia",
    "version": "1.7.1"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
