--- a/Ejercicio-1-2-Blanca-Cano.ipynb
+++ b/Ejercicio-1-2-Blanca-Cano.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -163,141 +163,174 @@
       "ALGORITMO DE DERECHA A IZQUIERDA \n",
       "------------------------------------------------------------\n",
       "------------------------------------------------------------\n",
-      "Ejección de derecha a izquierda para base=2 y p=75577393 \n",
+      "Ejección de derecha a izquierda para base=2 y p=75577399 \n",
       "------------------------------------------------------------\n",
       "paso 0, acu: 1, base: 2\n",
       "paso 1, acu: 1, base: 4\n",
-      "paso 2, acu: 1, base: 16\n",
-      "paso 3, acu: 1, base: 256\n",
-      "paso 4, acu: 1, base: 65536\n",
-      "paso 5, acu: 65536, base: 62633288\n",
-      "paso 6, acu: 51371145, base: 64387535\n",
-      "paso 7, acu: 51371145, base: 630021\n",
-      "paso 8, acu: 51371145, base: 69569798\n",
-      "paso 9, acu: 51371145, base: 45008198\n",
-      "paso 10, acu: 51371145, base: 65283027\n",
-      "paso 11, acu: 51371145, base: 31073893\n",
-      "paso 12, acu: 56423783, base: 1414180\n",
-      "paso 13, acu: 58729221, base: 51676227\n",
-      "paso 14, acu: 19427703, base: 29351351\n",
-      "paso 15, acu: 19427703, base: 15248746\n",
-      "paso 16, acu: 19427703, base: 50905175\n",
-      "paso 17, acu: 75330163, base: 30397990\n",
-      "paso 18, acu: 75330163, base: 20967546\n",
-      "paso 19, acu: 75330163, base: 57847108\n",
-      "paso 20, acu: 75330163, base: 49236013\n",
-      "paso 21, acu: 75330163, base: 39642879\n",
-      "paso 22, acu: 75330163, base: 33818781\n",
-      "paso 23, acu: 75330163, base: 56420502\n",
-      "paso 24, acu: 25252192, base: 35178271\n",
-      "paso 25, acu: 25252192, base: 17911643\n",
-      "paso 26, acu: 25252192, base: 14745733\n",
-      "paso 27, acu: 50057215, base: 28581931\n",
-      "Se tiene que 2^(75577393-1) mod 75577393 = 50057215\n",
+      "paso 2, acu: 4, base: 16\n",
+      "paso 3, acu: 64, base: 256\n",
+      "paso 4, acu: 64, base: 65536\n",
+      "paso 5, acu: 4194304, base: 62632952\n",
+      "paso 6, acu: 43754136, base: 62415056\n",
+      "paso 7, acu: 43754136, base: 67860964\n",
+      "paso 8, acu: 43754136, base: 17616671\n",
+      "paso 9, acu: 43754136, base: 71470788\n",
+      "paso 10, acu: 43754136, base: 64247259\n",
+      "paso 11, acu: 43754136, base: 5770751\n",
+      "paso 12, acu: 34656405, base: 48937429\n",
+      "paso 13, acu: 56626654, base: 51427514\n",
+      "paso 14, acu: 52966416, base: 63671641\n",
+      "paso 15, acu: 52966416, base: 74604685\n",
+      "paso 16, acu: 52966416, base: 19067715\n",
+      "paso 17, acu: 33127742, base: 56006092\n",
+      "paso 18, acu: 33127742, base: 50071778\n",
+      "paso 19, acu: 33127742, base: 8368797\n",
+      "paso 20, acu: 33127742, base: 18925298\n",
+      "paso 21, acu: 33127742, base: 17800278\n",
+      "paso 22, acu: 33127742, base: 40661073\n",
+      "paso 23, acu: 33127742, base: 66078618\n",
+      "paso 24, acu: 60842509, base: 47505594\n",
+      "paso 25, acu: 60842509, base: 44399169\n",
+      "paso 26, acu: 60842509, base: 2844773\n",
+      "paso 27, acu: 1, base: 56691407\n",
+      "Se tiene que 2^(75577399-1) mod 75577399 = 1\n",
       "------------------------------------------------------------\n",
       "------------------------------------------------------------\n",
-      "Ejección de derecha a izquierda para base=5 y p=75577393 \n",
+      "Ejección de derecha a izquierda para base=3 y p=75577399 \n",
+      "------------------------------------------------------------\n",
+      "paso 0, acu: 1, base: 3\n",
+      "paso 1, acu: 1, base: 9\n",
+      "paso 2, acu: 9, base: 81\n",
+      "paso 3, acu: 729, base: 6561\n",
+      "paso 4, acu: 729, base: 43046721\n",
+      "paso 5, acu: 16439024, base: 67392819\n",
+      "paso 6, acu: 6365032, base: 2369341\n",
+      "paso 7, acu: 6365032, base: 38731359\n",
+      "paso 8, acu: 6365032, base: 62347247\n",
+      "paso 9, acu: 6365032, base: 43746099\n",
+      "paso 10, acu: 6365032, base: 10168343\n",
+      "paso 11, acu: 6365032, base: 27115719\n",
+      "paso 12, acu: 16334259, base: 8552960\n",
+      "paso 13, acu: 5834559, base: 21989323\n",
+      "paso 14, acu: 1615728, base: 33437745\n",
+      "paso 15, acu: 1615728, base: 45899102\n",
+      "paso 16, acu: 1615728, base: 9541504\n",
+      "paso 17, acu: 46172094, base: 66056212\n",
+      "paso 18, acu: 46172094, base: 27955641\n",
+      "paso 19, acu: 46172094, base: 19876910\n",
+      "paso 20, acu: 46172094, base: 41462341\n",
+      "paso 21, acu: 46172094, base: 31357639\n",
+      "paso 22, acu: 46172094, base: 35684644\n",
+      "paso 23, acu: 46172094, base: 46717606\n",
+      "paso 24, acu: 63358899, base: 1213376\n",
+      "paso 25, acu: 63358899, base: 33584856\n",
+      "paso 26, acu: 63358899, base: 55858672\n",
+      "paso 27, acu: 1, base: 10602097\n",
+      "Se tiene que 3^(75577399-1) mod 75577399 = 1\n",
+      "------------------------------------------------------------\n",
+      "------------------------------------------------------------\n",
+      "Ejección de derecha a izquierda para base=5 y p=75577399 \n",
       "------------------------------------------------------------\n",
       "paso 0, acu: 1, base: 5\n",
       "paso 1, acu: 1, base: 25\n",
-      "paso 2, acu: 1, base: 625\n",
-      "paso 3, acu: 1, base: 390625\n",
-      "paso 4, acu: 1, base: 72711551\n",
-      "paso 5, acu: 72711551, base: 55071654\n",
-      "paso 6, acu: 23633979, base: 722994\n",
-      "paso 7, acu: 23633979, base: 27074048\n",
-      "paso 8, acu: 23633979, base: 26491951\n",
-      "paso 9, acu: 23633979, base: 6315093\n",
-      "paso 10, acu: 23633979, base: 23169981\n",
-      "paso 11, acu: 23633979, base: 30772177\n",
-      "paso 12, acu: 51278342, base: 35312367\n",
-      "paso 13, acu: 41617191, base: 65962381\n",
-      "paso 14, acu: 6784718, base: 72475540\n",
-      "paso 15, acu: 6784718, base: 36440351\n",
-      "paso 16, acu: 6784718, base: 2504407\n",
-      "paso 17, acu: 7871001, base: 37731365\n",
-      "paso 18, acu: 7871001, base: 18178645\n",
-      "paso 19, acu: 7871001, base: 637416\n",
-      "paso 20, acu: 7871001, base: 70669681\n",
-      "paso 21, acu: 7871001, base: 28854560\n",
-      "paso 22, acu: 7871001, base: 55388517\n",
-      "paso 23, acu: 7871001, base: 19836944\n",
-      "paso 24, acu: 60623956, base: 69769616\n",
-      "paso 25, acu: 60623956, base: 7608436\n",
-      "paso 26, acu: 60623956, base: 20929925\n",
-      "paso 27, acu: 58601398, base: 75199025\n",
-      "Se tiene que 5^(75577393-1) mod 75577393 = 58601398\n",
+      "paso 2, acu: 25, base: 625\n",
+      "paso 3, acu: 15625, base: 390625\n",
+      "paso 4, acu: 15625, base: 72699443\n",
+      "paso 5, acu: 489905, base: 28004127\n",
+      "paso 6, acu: 23329662, base: 56564058\n",
+      "paso 7, acu: 23329662, base: 30667551\n",
+      "paso 8, acu: 23329662, base: 2827180\n",
+      "paso 9, acu: 23329662, base: 32188958\n",
+      "paso 10, acu: 23329662, base: 60916072\n",
+      "paso 11, acu: 23329662, base: 67528892\n",
+      "paso 12, acu: 1227507, base: 18162563\n",
+      "paso 13, acu: 20712032, base: 50699148\n",
+      "paso 14, acu: 17826068, base: 18795119\n",
+      "paso 15, acu: 17826068, base: 26403463\n",
+      "paso 16, acu: 17826068, base: 678993\n",
+      "paso 17, acu: 54939674, base: 9360149\n",
+      "paso 18, acu: 54939674, base: 45285441\n",
+      "paso 19, acu: 54939674, base: 59835595\n",
+      "paso 20, acu: 54939674, base: 8094832\n",
+      "paso 21, acu: 54939674, base: 19978633\n",
+      "paso 22, acu: 54939674, base: 68448373\n",
+      "paso 23, acu: 54939674, base: 7244939\n",
+      "paso 24, acu: 17629668, base: 32889029\n",
+      "paso 25, acu: 17629668, base: 6997565\n",
+      "paso 26, acu: 17629668, base: 74891115\n",
+      "paso 27, acu: 1, base: 62955487\n",
+      "Se tiene que 5^(75577399-1) mod 75577399 = 1\n",
       "------------------------------------------------------------\n",
       "------------------------------------------------------------\n",
-      "Ejección de derecha a izquierda para base=7 y p=75577393 \n",
+      "Ejección de derecha a izquierda para base=7 y p=75577399 \n",
       "------------------------------------------------------------\n",
       "paso 0, acu: 1, base: 7\n",
       "paso 1, acu: 1, base: 49\n",
-      "paso 2, acu: 1, base: 2401\n",
-      "paso 3, acu: 1, base: 5764801\n",
-      "paso 4, acu: 1, base: 39319641\n",
-      "paso 5, acu: 39319641, base: 41633409\n",
-      "paso 6, acu: 55194768, base: 66480796\n",
-      "paso 7, acu: 55194768, base: 52087355\n",
-      "paso 8, acu: 55194768, base: 30348639\n",
-      "paso 9, acu: 55194768, base: 42527898\n",
-      "paso 10, acu: 55194768, base: 73466300\n",
-      "paso 11, acu: 55194768, base: 65944225\n",
-      "paso 12, acu: 15243323, base: 72566388\n",
-      "paso 13, acu: 51112320, base: 38200531\n",
-      "paso 14, acu: 1252680, base: 68668543\n",
-      "paso 15, acu: 1252680, base: 20957669\n",
-      "paso 16, acu: 1252680, base: 51034800\n",
-      "paso 17, acu: 36721837, base: 48265245\n",
-      "paso 18, acu: 36721837, base: 24820324\n",
-      "paso 19, acu: 36721837, base: 72631158\n",
-      "paso 20, acu: 36721837, base: 10356996\n",
-      "paso 21, acu: 36721837, base: 69949544\n",
-      "paso 22, acu: 36721837, base: 12817933\n",
-      "paso 23, acu: 36721837, base: 49047143\n",
-      "paso 24, acu: 13261803, base: 14618675\n",
-      "paso 25, acu: 13261803, base: 74790498\n",
-      "paso 26, acu: 13261803, base: 73737569\n",
-      "paso 27, acu: 22113448, base: 67650685\n",
-      "Se tiene que 7^(75577393-1) mod 75577393 = 22113448\n",
+      "paso 2, acu: 49, base: 2401\n",
+      "paso 3, acu: 117649, base: 5764801\n",
+      "paso 4, acu: 117649, base: 36681321\n",
+      "paso 5, acu: 51251429, base: 62737837\n",
+      "paso 6, acu: 13202588, base: 17122109\n",
+      "paso 7, acu: 13202588, base: 72029305\n",
+      "paso 8, acu: 13202588, base: 43681406\n",
+      "paso 9, acu: 13202588, base: 48396341\n",
+      "paso 10, acu: 13202588, base: 26978904\n",
+      "paso 11, acu: 13202588, base: 45081689\n",
+      "paso 12, acu: 49134235, base: 44617811\n",
+      "paso 13, acu: 36986031, base: 10440655\n",
+      "paso 14, acu: 52788947, base: 29238951\n",
+      "paso 15, acu: 52788947, base: 60304398\n",
+      "paso 16, acu: 52788947, base: 56795633\n",
+      "paso 17, acu: 16580998, base: 20610019\n",
+      "paso 18, acu: 16580998, base: 12740130\n",
+      "paso 19, acu: 16580998, base: 58973111\n",
+      "paso 20, acu: 16580998, base: 34037091\n",
+      "paso 21, acu: 16580998, base: 32948049\n",
+      "paso 22, acu: 16580998, base: 50526338\n",
+      "paso 23, acu: 16580998, base: 9445004\n",
+      "paso 24, acu: 36250940, base: 15340770\n",
+      "paso 25, acu: 36250940, base: 46262583\n",
+      "paso 26, acu: 36250940, base: 29056830\n",
+      "paso 27, acu: 1, base: 60652220\n",
+      "Se tiene que 7^(75577399-1) mod 75577399 = 1\n",
       "------------------------------------------------------------\n",
       "------------------------------------------------------------\n",
-      "Ejección de derecha a izquierda para base=11 y p=75577393 \n",
+      "Ejección de derecha a izquierda para base=11 y p=75577399 \n",
       "------------------------------------------------------------\n",
       "paso 0, acu: 1, base: 11\n",
       "paso 1, acu: 1, base: 121\n",
-      "paso 2, acu: 1, base: 14641\n",
-      "paso 3, acu: 1, base: 63204095\n",
-      "paso 4, acu: 1, base: 18003630\n",
-      "paso 5, acu: 18003630, base: 38382975\n",
-      "paso 6, acu: 56590910, base: 50461118\n",
-      "paso 7, acu: 56590910, base: 2150229\n",
-      "paso 8, acu: 56590910, base: 37735666\n",
-      "paso 9, acu: 56590910, base: 72553434\n",
-      "paso 10, acu: 56590910, base: 68099825\n",
-      "paso 11, acu: 56590910, base: 53995792\n",
-      "paso 12, acu: 68674646, base: 16083735\n",
-      "paso 13, acu: 27558667, base: 4057646\n",
-      "paso 14, acu: 62318584, base: 31573659\n",
-      "paso 15, acu: 62318584, base: 49175867\n",
-      "paso 16, acu: 62318584, base: 28973373\n",
-      "paso 17, acu: 63341729, base: 24794416\n",
-      "paso 18, acu: 63341729, base: 74247382\n",
-      "paso 19, acu: 63341729, base: 40376956\n",
-      "paso 20, acu: 63341729, base: 39384258\n",
-      "paso 21, acu: 63341729, base: 48700122\n",
-      "paso 22, acu: 63341729, base: 4187798\n",
-      "paso 23, acu: 63341729, base: 69197940\n",
-      "paso 24, acu: 58457034, base: 52532211\n",
-      "paso 25, acu: 58457034, base: 37814342\n",
-      "paso 26, acu: 58457034, base: 34178178\n",
-      "paso 27, acu: 21343212, base: 9467675\n",
-      "Se tiene que 11^(75577393-1) mod 75577393 = 21343212\n"
+      "paso 2, acu: 121, base: 14641\n",
+      "paso 3, acu: 1771561, base: 63204083\n",
+      "paso 4, acu: 1771561, base: 73401379\n",
+      "paso 5, acu: 24223573, base: 63415651\n",
+      "paso 6, acu: 13125992, base: 45899145\n",
+      "paso 7, acu: 13125992, base: 26841377\n",
+      "paso 8, acu: 13125992, base: 51445066\n",
+      "paso 9, acu: 13125992, base: 63556292\n",
+      "paso 10, acu: 13125992, base: 3521489\n",
+      "paso 11, acu: 13125992, base: 69571802\n",
+      "paso 12, acu: 724347, base: 73398230\n",
+      "paso 13, acu: 35027871, base: 22819194\n",
+      "paso 14, acu: 2693590, base: 32702668\n",
+      "paso 15, acu: 2693590, base: 10112410\n",
+      "paso 16, acu: 2693590, base: 4939761\n",
+      "paso 17, acu: 63005843, base: 17386385\n",
+      "paso 18, acu: 63005843, base: 65207117\n",
+      "paso 19, acu: 63005843, base: 40007272\n",
+      "paso 20, acu: 63005843, base: 29144832\n",
+      "paso 21, acu: 63005843, base: 42981314\n",
+      "paso 22, acu: 63005843, base: 44640523\n",
+      "paso 23, acu: 63005843, base: 33149086\n",
+      "paso 24, acu: 945760, base: 1963153\n",
+      "paso 25, acu: 945760, base: 51394202\n",
+      "paso 26, acu: 945760, base: 34390929\n",
+      "paso 27, acu: 1, base: 37680775\n",
+      "Se tiene que 11^(75577399-1) mod 75577399 = 1\n"
      ]
     }
    ],
    "source": [
-    "bases = [2,5,7,11]\n",
+    "bases = primos\n",
     "println(\"ALGORITMO DE DERECHA A IZQUIERDA \")\n",
     "for b in bases\n",
     "    println(repeat('-', 60))\n",
