Corrige errores ejercio 2 close #1

--- a/Ejercicio-1-2-Blanca-Cano.ipynb
+++ b/Ejercicio-1-2-Blanca-Cano.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "75577392"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "VerboseRightToLeftFastExponential (generic function with 1 method)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "VerboseLeftToRightFastExponential (generic function with 1 method)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -530,13 +530,7 @@
       "Paso 27 , acu: 21343212\n",
       "Se tiene que 11^(75577393-1) mod 75577393 = 21343212\n",
       "------------------------------------------------------------\n",
-      "------------------------------------------------------------\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "------------------------------------------------------------\n",
       "Ejección de DERECHA a IZQUIERDA para base=11 y p=75577393 \n",
       "------------------------------------------------------------\n",
       "paso 0, acu: 1, base: 11\n",
@@ -596,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +645,7 @@
        "75577399"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +685,7 @@
        "1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +793,7 @@
        "4"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +851,7 @@
        "2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +918,7 @@
        "7"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +945,7 @@
        "VerboseJacobi (generic function with 1 method)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1085,7 @@
       "Base 3\n",
       "Por el algoritmo Jacobi (3/75577399) = -1\n",
       "Calculando el módulo, 3^{75577398/2} = 75577398\n",
-      "75577399 NO es primo gracias al criterio de Euler en base 3\n",
+      "75577399 es un posible primo Euler en base 3\n",
       "\n",
       "Base 5\n",
       "Por el algoritmo Jacobi (5/75577399) = 1\n",
@@ -1101,7 +1095,7 @@
       "Base 7\n",
       "Por el algoritmo Jacobi (7/75577399) = -1\n",
       "Calculando el módulo, 7^{75577398/2} = 75577398\n",
-      "75577399 NO es primo gracias al criterio de Euler en base 7\n",
+      "75577399 es un posible primo Euler en base 7\n",
       "\n",
       "Base 11\n",
       "Por el algoritmo Jacobi (11/75577399) = 1\n",
@@ -1118,7 +1112,7 @@
     "    println(\"\\nBase $b\")\n",
     "    println(\"Por el algoritmo Jacobi ($b/$n) = $jacobi\")\n",
     "    println(\"Calculando el módulo, $b^{$((n-1))/2} = $congruente\")\n",
-    "    println(congruente == jacobi ? \n",
+    "    println((congruente == jacobi || (congruente-n) == jacobi)  ? \n",
     "        \"$n es un posible primo Euler en base $b\" : \n",
     "        \"$n NO es primo gracias al criterio de Euler en base $b\")\n",
     "end"
@@ -1128,16 +1122,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Acabamos de comprobar que $n$ es un posible primo de Euler para las bases 2, 5 y 11, pero gracias a la base 3 o a la 7 sabemos que no es primo, si no que se trata de un **pseudo primo** de Euler en las bases 2, 5 y 11."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Conclusiones   \n",
     "Puesto que acabamos de comprobar que $n$ no es primo, se tiene que: \n",
-    "$n$ es un pseudo primo de Fermat para las bases 2,3,5,7 y 11; mientras que se ha comprobado en `celda 2` que es un pseudo primo de Euler en las bases 2,5 y 11. "
+    "$n$ es un pseudo primo de Fermat para las bases 2,3,5,7 y 11 y también es un posible  primo de Euler en las mismas bases, luego es probable que se trate de un primo, la certeza solo la tendríamos aplicando un test que nos de un certificado de primalidad. "
    ]
   }
  ],
