Apartado tercero acabado #2

--- a/Ejercicio-3-Blanca-Cano.ipynb
+++ b/Ejercicio-3-Blanca-Cano.ipynb
@@ -1,37 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "24d1d34c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "e50b3805",
    "metadata": {},
    "source": [
     "# Ejercicio 3  \n",
     "\n",
-    "Autora: Blanca Cano Camarero "
+    "Autora: Blanca Cano Camarero   \n",
+    "Correo: BlancaCano@correo.ugr.es"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 92,
    "id": "0dab1616",
    "metadata": {},
    "outputs": [
@@ -109,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 93,
    "id": "b7402d92",
    "metadata": {},
    "outputs": [],
@@ -134,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 94,
    "id": "6853ab9a",
    "metadata": {},
    "outputs": [
@@ -168,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 95,
    "id": "0aab8d8f",
    "metadata": {},
    "outputs": [
@@ -205,19 +187,23 @@
     }
    ],
    "source": [
-    "def TestSolovayStrassen(b:Integer,n:Integer):\n",
+    "def VerboseTest_Solovay_Strassen(b:Integer,n:Integer):\n",
     "    congruente = LeftToRightFastExponential(b, (n-1)//2, n)\n",
     "    jacobi = Jacobi(b,n)\n",
     "    print(f\"\\nTest Solovay Strassen Base {b} n ={n}\")\n",
     "    print(f\"Por el algoritmo Jacobi (b/n) = {jacobi}\")\n",
     "    print(f\"b^((n-1))/2 modulo n es  {congruente}\")\n",
+    "    posible_primo = False\n",
     "    if (congruente == jacobi or (congruente-n) == jacobi): \n",
     "        print(f\"{n} es un posible primo Euler en base {b}\")\n",
+    "        posible_primo = True\n",
     "    else:  \n",
     "        print(f\"{n} NO es primo gracias al criterio de Euler en base {b}\")\n",
-    "\n",
+    "        posible_primo = False\n",
+    "    return posible_primo\n",
+    "    \n",
     "for b in primos:\n",
-    "    TestSolovayStrassen(b,m)"
+    "    VerboseTest_Solovay_Strassen(b,m)"
    ]
   },
   {
@@ -228,6 +214,110 @@
     "### Apartado iii\n",
     "\n",
     "Calcula el test de Miller-Rabin para esas 5 bases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "3846a94f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " ============================================================\n",
+      "Test Miller Rabin base a = 2, n = 32626283485046465973090501329113 \n",
+      " m=4078285435630808246636312666139, n = m * 2^3\n",
+      "============================================================\n",
+      " Para r=0 el término sucesión mod(a^(m 2^r), n) es: -1\n",
+      " Para r=1 el término sucesión mod(a^(m 2^r), n) es: 1\n",
+      " Para r=2 el término sucesión mod(a^(m 2^r), n) es: 1\n",
+      " Para r=3 el término sucesión mod(a^(m 2^r), n) es: 1\n",
+      "32626283485046465973090501329113 es un posible primo de Miller-Rabin para la base 2 \n",
+      "\n",
+      "\n",
+      " ============================================================\n",
+      "Test Miller Rabin base a = 3, n = 32626283485046465973090501329113 \n",
+      " m=4078285435630808246636312666139, n = m * 2^3\n",
+      "============================================================\n",
+      " Para r=0 el término sucesión mod(a^(m 2^r), n) es: 4803683511556350419495601881218\n",
+      " Para r=1 el término sucesión mod(a^(m 2^r), n) es: -1\n",
+      " Para r=2 el término sucesión mod(a^(m 2^r), n) es: 1\n",
+      " Para r=3 el término sucesión mod(a^(m 2^r), n) es: 1\n",
+      "32626283485046465973090501329113 es un posible primo de Miller-Rabin para la base 3 \n",
+      "\n",
+      "\n",
+      " ============================================================\n",
+      "Test Miller Rabin base a = 5, n = 32626283485046465973090501329113 \n",
+      " m=4078285435630808246636312666139, n = m * 2^3\n",
+      "============================================================\n",
+      " Para r=0 el término sucesión mod(a^(m 2^r), n) es: 4213834354828386761764425924603\n",
+      " Para r=1 el término sucesión mod(a^(m 2^r), n) es: -4803683511556350419495601881218\n",
+      " Para r=2 el término sucesión mod(a^(m 2^r), n) es: -1\n",
+      " Para r=3 el término sucesión mod(a^(m 2^r), n) es: 1\n",
+      "32626283485046465973090501329113 es un posible primo de Miller-Rabin para la base 5 \n",
+      "\n",
+      "\n",
+      " ============================================================\n",
+      "Test Miller Rabin base a = 7, n = 32626283485046465973090501329113 \n",
+      " m=4078285435630808246636312666139, n = m * 2^3\n",
+      "============================================================\n",
+      " Para r=0 el término sucesión mod(a^(m 2^r), n) es: -4803683511556350419495601881218\n",
+      " Para r=1 el término sucesión mod(a^(m 2^r), n) es: -1\n",
+      " Para r=2 el término sucesión mod(a^(m 2^r), n) es: 1\n",
+      " Para r=3 el término sucesión mod(a^(m 2^r), n) es: 1\n",
+      "32626283485046465973090501329113 es un posible primo de Miller-Rabin para la base 7 \n",
+      "\n",
+      "\n",
+      " ============================================================\n",
+      "Test Miller Rabin base a = 11, n = 32626283485046465973090501329113 \n",
+      " m=4078285435630808246636312666139, n = m * 2^3\n",
+      "============================================================\n",
+      " Para r=0 el término sucesión mod(a^(m 2^r), n) es: -4213834354828386761764425924603\n",
+      " Para r=1 el término sucesión mod(a^(m 2^r), n) es: -4803683511556350419495601881218\n",
+      " Para r=2 el término sucesión mod(a^(m 2^r), n) es: -1\n",
+      " Para r=3 el término sucesión mod(a^(m 2^r), n) es: 1\n",
+      "32626283485046465973090501329113 es un posible primo de Miller-Rabin para la base 11 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "ModuloBonito = lambda x,n : (x-n, x)[x< (n//2)]\n",
+    "\n",
+    "def Test_Miller_Rabin(a: Integer, n:Integer)-> bool:\n",
+    "    compuesto  = False\n",
+    "    # Calculamos sucesión impar \n",
+    "    m = (n-1)\n",
+    "    r = 0\n",
+    "    while is_even(m):\n",
+    "        m //= 2\n",
+    "        r += 1\n",
+    "    print('\\n','='*60)\n",
+    "    print(f\"Test Miller Rabin base a = {a}, n = {n} \\n m={m}, n = m * 2^{r}\")\n",
+    "    print('='*60)\n",
+    "    anterior = 1\n",
+    "    # Cálculo de la a-sucesión \n",
+    "    for i in range(r+1):\n",
+    "        congruente = pow(a, m * pow(2, i), n)\n",
+    "        congruente_bonito = ModuloBonito(int(congruente), int(n))\n",
+    "        print(f\" Para r={i} el término sucesión mod(a^(m 2^r), n) es: {congruente_bonito}\")\n",
+    "        if( congruente_bonito == 1 and  abs(anterior) != 1):\n",
+    "           compuesto = True\n",
+    "        anterior = congruente_bonito\n",
+    "    if anterior != 1:\n",
+    "        compuesto = True\n",
+    "    salida = (\n",
+    "        f\"{n} es un posible primo de Miller-Rabin para la base {a}\",\n",
+    "        f\"{n} es compuesto\"\n",
+    "        )[compuesto]\n",
+    "    print(salida, '\\n')\n",
+    "    return compuesto \n",
+    "\n",
+    "for p in primos:\n",
+    "    Test_Miller_Rabin(p,m)"
    ]
   }
  ],
