Apartado tercero con duda #2

--- a/Ejercicio-3-Blanca-Cano.ipynb
+++ b/Ejercicio-3-Blanca-Cano.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "0aab8d8f",
    "metadata": {},
    "outputs": [
@@ -205,19 +205,23 @@
     }
    ],
    "source": [
-    "def TestSolovayStrassen(b:Integer,n:Integer):\n",
+    "def VerboseTest_Solovay_Strassen(b:Integer,n:Integer):\n",
     "    congruente = LeftToRightFastExponential(b, (n-1)//2, n)\n",
     "    jacobi = Jacobi(b,n)\n",
     "    print(f\"\\nTest Solovay Strassen Base {b} n ={n}\")\n",
     "    print(f\"Por el algoritmo Jacobi (b/n) = {jacobi}\")\n",
     "    print(f\"b^((n-1))/2 modulo n es  {congruente}\")\n",
+    "    posible_primo = False\n",
     "    if (congruente == jacobi or (congruente-n) == jacobi): \n",
     "        print(f\"{n} es un posible primo Euler en base {b}\")\n",
+    "        posible_primo = True\n",
     "    else:  \n",
     "        print(f\"{n} NO es primo gracias al criterio de Euler en base {b}\")\n",
-    "\n",
+    "        posible_primo = False\n",
+    "    return posible_primo\n",
+    "    \n",
     "for b in primos:\n",
-    "    TestSolovayStrassen(b,m)"
+    "    VerboseTest_Solovay_Strassen(b,m)"
    ]
   },
   {
@@ -228,6 +232,80 @@
     "### Apartado iii\n",
     "\n",
     "Calcula el test de Miller-Rabin para esas 5 bases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "3846a94f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Miller Rabin base a = 2, m=4078285435630808246636312666139\n",
+      " Para r=0 el término sucesión es: -1\n",
+      " Para r=1 el término sucesión es: 1\n",
+      " Para r=2 el término sucesión es: 1\n",
+      "32626283485046465973090501329113 es un posible primo de Miller-Rabin para la base 2 \n",
+      "\n",
+      "Test Miller Rabin base a = 3, m=4078285435630808246636312666139\n",
+      " Para r=0 el término sucesión es: 4803683511556350419495601881218\n",
+      " Para r=1 el término sucesión es: -1\n",
+      " Para r=2 el término sucesión es: 1\n",
+      "32626283485046465973090501329113 es compuesto \n",
+      "\n",
+      "Test Miller Rabin base a = 5, m=4078285435630808246636312666139\n",
+      " Para r=0 el término sucesión es: 4213834354828386761764425924603\n",
+      " Para r=1 el término sucesión es: -4803683511556350419495601881218\n",
+      " Para r=2 el término sucesión es: -1\n",
+      "32626283485046465973090501329113 es compuesto \n",
+      "\n",
+      "Test Miller Rabin base a = 7, m=4078285435630808246636312666139\n",
+      " Para r=0 el término sucesión es: -4803683511556350419495601881218\n",
+      " Para r=1 el término sucesión es: -1\n",
+      " Para r=2 el término sucesión es: 1\n",
+      "32626283485046465973090501329113 es compuesto \n",
+      "\n",
+      "Test Miller Rabin base a = 11, m=4078285435630808246636312666139\n",
+      " Para r=0 el término sucesión es: -4213834354828386761764425924603\n",
+      " Para r=1 el término sucesión es: -4803683511556350419495601881218\n",
+      " Para r=2 el término sucesión es: -1\n",
+      "32626283485046465973090501329113 es compuesto \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "ModuloBonito = lambda x,n : (x-n, x)[x< (n//2)]\n",
+    "def Test_Miller_Rabin(a: Integer, n:Integer)-> bool:\n",
+    "    compuesto  = False\n",
+    "    # Calculamos sucesión impar \n",
+    "    m = (n-1)//2\n",
+    "    r = 1\n",
+    "    while is_even(m):\n",
+    "        m //= 2\n",
+    "        r += 1\n",
+    "    print(f\"Test Miller Rabin base a = {a}, m={m}\")\n",
+    "    # Cálculo de la a-sucesión \n",
+    "    for i in range(r):\n",
+    "        congruente = LeftToRightFastExponential(a, (2**i)*m, n)\n",
+    "        congruente_bonito = ModuloBonito(int(congruente), int(n))\n",
+    "        print(f\" Para r={i} el término sucesión es: {congruente_bonito}\")\n",
+    "        if( abs(congruente_bonito) != 1):\n",
+    "           compuesto = True\n",
+    "    if congruente_bonito != 1:\n",
+    "        compuesto = True\n",
+    "    salida = (\n",
+    "        f\"{n} es un posible primo de Miller-Rabin para la base {a}\",\n",
+    "        f\"{n} es compuesto\"\n",
+    "        )[compuesto]\n",
+    "    print(salida, '\\n')\n",
+    "    return compuesto \n",
+    "\n",
+    "for p in primos:\n",
+    "    Test_Miller_Rabin(p,m)"
    ]
   }
  ],
