Acabo ejercicio 3 #2 A falta de revisión

--- a/Ejercicio-3-Blanca-Cano.ipynb
+++ b/Ejercicio-3-Blanca-Cano.ipynb
@@ -13,27 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 98,
    "id": "0dab1616",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Para base b=2 mod(b^75577392, n) = 50057215\n",
-      "Para base b=3 mod(b^75577392, n) = 64972403\n",
-      "Para base b=5 mod(b^75577392, n) = 58601398\n",
-      "Para base b=7 mod(b^75577392, n) = 22113448\n",
-      "Para base b=11 mod(b^75577392, n) = 21343212\n",
-      "p=2 jacobi 1\n",
-      "p=2 jacobi -1\n",
-      "p=2 jacobi 1\n",
-      "p=2 jacobi -1\n",
-      "p=2 jacobi 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Código auxiliar  de prácticas anteriores \n",
     "# Exponencial rápida \n",
@@ -51,13 +34,6 @@
     "            acc = mod(acc*a, n )   \n",
     "    return acc\n",
     "\n",
-    "# Test  \n",
-    "n = 75577393\n",
-    "primos = [2,3,5,7,11]\n",
-    "for b in primos:\n",
-    "    r2 = LeftToRightFastExponential(b, n-1, n)\n",
-    "    print(f\"Para base b={b} mod(b^{n-1}, n) = {r2}\")\n",
-    "\n",
     "primos = [2,3,5,7,11]\n",
     "def Jacobi(a :Integer,n :Integer):\n",
     "    a %= n\n",
@@ -73,12 +49,7 @@
     "        a %=n\n",
     "    \n",
     "\n",
-    "    return (0,result)[n == 1] \n",
-    "# Test     \n",
-    "n = 75577399\n",
-    "for p in primos:\n",
-    "    print(f\"p={2} jacobi {Jacobi(p,n)}\")\n",
-    "\n"
+    "    return (0,result)[n == 1] "
    ]
   },
   {
@@ -91,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 99,
    "id": "b7402d92",
    "metadata": {},
    "outputs": [],
@@ -116,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 100,
    "id": "6853ab9a",
    "metadata": {},
    "outputs": [
@@ -150,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 101,
    "id": "0aab8d8f",
    "metadata": {},
    "outputs": [
@@ -218,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 102,
    "id": "3846a94f",
    "metadata": {},
    "outputs": [
