--- a/Ejercicio-3-Blanca-Cano.ipynb
+++ b/Ejercicio-3-Blanca-Cano.ipynb
@@ -290,6 +290,39 @@
     "for p in primos:\n",
     "    Test_Miller_Rabin(p,m)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "759210a7",
+   "metadata": {},
+   "source": [
+    "### Apartado iv\n",
+    "¿Qué deduces sobre la primalidad de tu número?\n",
+    "\n",
+    "Puesto que ha pasado el test de Miller-Rabin para las bases $\\{2,3,5,7,11\\}$ tenemos que es un probable primo con probabilidad:\n",
+    "$1 - 4^{-5}:$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "bae1ade9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9990234375"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float(1 - 4^(-5))"
+   ]
   }
  ],
  "metadata": {
